doc: auto-generate table of contents for GitHub.

--- a/README.md.in
+++ b/README.md.in
@@ -2,6 +2,11 @@
 LJClang -- A LuaJIT-based interface to libclang
 ===============================================
 
+### Table of Contents
+
+@@[toc]
+
+
 Introduction
 ------------
 
