--- a/README.md.in
+++ b/README.md.in
@@ -113,7 +113,7 @@ contains the following:
 [`enum CXChildVisitResult`]:
  http://clang.llvm.org/doxygen/group__CINDEX__CURSOR__TRAVERSAL.html#ga99a9058656e696b622fbefaf5207d715
 
-An object containing a mapping of names to values permissible as values returned
+An object mapping names to values to be returned
 from cursor visitor callbacks. The names are identical with those in [`enum
 CXChildVisitResult`] with the "`CXChildVisit_`" prefix removed: `Break`,
 `Continue`, `Recurse`.
@@ -127,8 +127,8 @@ CXChildVisitResult`] with the "`CXChildVisit_`" prefix removed: `Break`,
 [`enum CXErrorCode`]:
  http://clang.llvm.org/doxygen/CXErrorCode_8h.html#adba17f287f8184fc266f2db4e669bf0f
 
-An object containing a mapping of names to value representing success or various
-error conditions. The names are identical with those in [`enum CXErrorCode`] with
+An object mapping names to values representing success or various
+error conditions. The names are identical to those in [`enum CXErrorCode`] with
 the "`CXError_`" prefix removed.
 
 ### Index
