dev: in posix_decls.lua.in, merge lines with identical extractions specs.

--- a/dev/posix_decls.lua.in
+++ b/dev/posix_decls.lua.in
@@ -11,17 +11,13 @@ CLOCK = ffi.new[[struct {
 @@ -w MacroDefinition -C -p ^CLOCK_MONOTONIC$ -s ^CLOCK_ /usr/include/time.h
 }]], 
 E = ffi.new[[struct {
-@@ -w MacroDefinition -C -p ^EAGAIN$ -s ^E /usr/include/errno.h
-@@ -w MacroDefinition -C -p ^EPIPE$ -s ^E /usr/include/errno.h
+@@ -w MacroDefinition -C -p ^EAGAIN$ -p ^EPIPE$ -s ^E /usr/include/errno.h
 }]], 
 MAP = ffi.new[[struct {
 @@ -w MacroDefinition -C -p ^MAP_[SPF][HRI][AIX][^_]+$ -s ^MAP_ /usr/include/asm-generic/mman.h
 }]], 
 O = ffi.new[[struct {
-@@ -w MacroDefinition -C -p ^O_RDONLY$ -s ^O_ /usr/include/fcntl.h
-@@ -w MacroDefinition -C -p ^O_WRONLY$ -s ^O_ /usr/include/fcntl.h
-@@ -w MacroDefinition -C -p ^O_RDWR$ -s ^O_ /usr/include/fcntl.h
-@@ -w MacroDefinition -C -p ^O_NONBLOCK$ -s ^O_ /usr/include/fcntl.h
+@@ -w MacroDefinition -C -p ^O_RDONLY$ -p ^O_WRONLY$ -p ^O_RDWR$ -p ^O_NONBLOCK$ -s ^O_ /usr/include/fcntl.h
 }]], 
 PROT = ffi.new[[struct {
 @@ -w MacroDefinition -C -p ^PROT_[RWN] -s ^PROT_ /usr/include/asm-generic/mman.h
@@ -33,8 +29,7 @@ SHUT = ffi.new[[struct {
 @@ -w EnumConstantDecl -C -p ^SHUT_RDWR$ -s ^SHUT_ ./dev/sys.h
 }]], 
 SIG = ffi.new[[struct {
-@@ -w MacroDefinition -C -p ^SIGINT$ -s ^SIG /usr/include/signal.h
-@@ -w MacroDefinition -C -p ^SIGPIPE$ -s ^SIG /usr/include/signal.h
+@@ -w MacroDefinition -C -p ^SIGINT$ -p ^SIGPIPE$ -s ^SIG /usr/include/signal.h
 @@ -w MacroDefinition -C -p ^SIG_BLOCK$ -s ^SIG_ /usr/include/signal.h
 }]], 
 SOCK = ffi.new[[struct {
