dev: in posix_types.lua.in, place all extractions specs on one logical line.
mkdecls.sh now allows backslashes at the end of a line, and only there.

--- a/dev/posix_types.lua.in
+++ b/dev/posix_types.lua.in
@@ -3,11 +3,12 @@ local ffi=require"ffi"
 ----------
 
 ffi.cdef[[
-@@ -w TypedefDecl -p ^_*clock_t$ -p ^_*clockid_t$ -p ^_*time_t$ -p ^_*suseconds_t$ ./dev/posix.h
-@@ -w TypedefDecl -p ^_*blkcnt_t$ -p ^_*blksize_t$ -p ^_*fsblkcnt_t$ -p ^_*fsfilcnt_t$ -p ^_*ino_t$ ./dev/posix.h
-@@ -w TypedefDecl -p ^_*id_t$ -p ^_*gid_t$ -p ^_*pid_t$ -p ^_*uid_t$ ./dev/posix.h
-@@ -w TypedefDecl -p ^_*mode_t$ -p ^_*nfds_t$ -p ^_*nlink_t$ -p ^_*off_t$ -p ^_*ssize_t$ ./dev/posix.h
-@@ -w TypedefDecl -p ^__u_quad_t$ -p ^_*dev_t$ -p ^_*sa_family_t$ -p ^_*socklen_t$ ./dev/posix.h
+@@ -w TypedefDecl ./dev/posix.h \
+ -p ^_*clock_t$ -p ^_*clockid_t$ -p ^_*time_t$ -p ^_*suseconds_t$ \
+ -p ^_*blkcnt_t$ -p ^_*blksize_t$ -p ^_*fsblkcnt_t$ -p ^_*fsfilcnt_t$ -p ^_*ino_t$ \
+ -p ^_*id_t$ -p ^_*gid_t$ -p ^_*pid_t$ -p ^_*uid_t$ \
+ -p ^_*mode_t$ -p ^_*nfds_t$ -p ^_*nlink_t$ -p ^_*off_t$ -p ^_*ssize_t$ \
+ -p ^__u_quad_t$ -p ^_*dev_t$ -p ^_*sa_family_t$ -p ^_*socklen_t$
 ]]
 
 local ljposix = ffi.load("ljposix")
