--- a/dev/posix_decls.lua.in
+++ b/dev/posix_decls.lua.in
@@ -26,13 +26,13 @@ _SC = ffi.new[[struct {
 @@ -w E+M -C -p ^_SC_PAGESIZE$ -s ^_SC_ /usr/include/unistd.h
 }]], 
 SHUT = ffi.new[[struct {
-@@ -w EnumConstantDecl -C -p ^SHUT_RDWR$ -s ^SHUT_ ./dev/sys.h
+@@ -w E+M -C -p ^SHUT_RDWR$ -s ^SHUT_ ./dev/sys.h
 }]], 
 SIG = ffi.new[[struct {
 @@ -w MacroDefinition -C -p ^SIGINT$ -p ^SIGPIPE$ -s ^SIG /usr/include/signal.h
 @@ -w MacroDefinition -C -p ^SIG_BLOCK$ -s ^SIG_ /usr/include/signal.h
 }]], 
 SOCK = ffi.new[[struct {
-@@ -w EnumConstantDecl -C -p ^SOCK_STREAM$ -s ^SOCK_ ./dev/sys.h
+@@ -w E+M -C -p ^SOCK_STREAM$ -s ^SOCK_ ./dev/sys.h
 }]],
 }
