dev/ljclang_linux_decls.lua.in: include indirectly, extract Linux-specific MREMAP constants.

--- a/dev/ljclang_linux_decls.lua.in
+++ b/dev/ljclang_linux_decls.lua.in
@@ -7,6 +7,9 @@ IN = ffi.new[[struct {
 @@ -w MacroDefinition -C -p ^IN_ -s ^IN_ ./dev/sys.h
 }]],
 MAP = ffi.new[[struct {
-@@ -w MacroDefinition -C -p ^MAP_ANONYMOUS$ -s ^MAP_ /usr/include/asm-generic/mman.h
+@@ -w MacroDefinition -C -p ^MAP_ANONYMOUS$ -s ^MAP_ ./dev/sys.h
+}]],
+MREMAP = ffi.new[[struct {
+@@ -w MacroDefinition -C -p ^MREMAP_FIXED$ -p ^MREMAP_MAYMOVE$ -s ^MREMAP_ -A -D_GNU_SOURCE=1 ./dev/sys.h
 }]],
 }
