docker: clone, build and test LJClang.

--- a/docker/Dockerfile.alpine.in
+++ b/docker/Dockerfile.alpine.in
@@ -29,6 +29,51 @@ USER user
 
 WORKDIR /home/user
 
+########## LJClang cloned from the build context ##########
+
+# Install prerequisites
+USER root
+RUN apk add bash
+RUN apk add clang-dev
+USER user
+
+COPY / .
+# Create a non-bare repository:
+RUN git clone --depth=1 ./ljclang.git ./ljclang
+WORKDIR ljclang
+
+# Do not install llvm-dev, do not rely on llvm-config. (See 'sed -i' invocations below.)
+# On Alpine Linux, clang-c/Index.h is in /usr/include and libclang.so is in /usr/lib.
+#  Using 'llvm-config' of package 'llvm-dev' would wrongly point us to /usr/lib/llvm9.
+# This has not been re-checked for Alpine 3.12 (which ships with LLVM 10) but in any case,
+# it is nice to avoid the big package if it's not really necessary.
+#
+# TODO in ljclang:
+#  - remove altogether in favor of an alternative detection scheme that addresses all
+#    now supported platforms (Ubuntu x86_64, Raspberry Pi OS 32-bit, Alpine Linux here)?
+ENV LLVM_CONFIG=true
+
+WORKDIR /home/user/ljclang
+RUN sed -i 's|llvm_version :=.*|llvm_version := 10.0.0|' ./Makefile
+RUN sed -i 's|bindir :=.*|bindir := /usr/bin|' ./Makefile
+RUN sed -i 's|incdir :=.*|incdir := /usr/include|' ./Makefile
+RUN sed -i 's|libdir :=.*|libdir := /does-not-exist-and-is-not-relevant-here|' ./Makefile
+
+RUN make apps
+
+# Run the LJClang tests.
+USER root
+RUN apk add luarocks5.1
+# NOTE: CFLAGS=-I/usr/local/include/luajit-2.1 before 'luarocks-5.1' does not work:
+RUN apk add lua5.1-dev
+USER user
+RUN luarocks-5.1 --local install busted
+#
+WORKDIR /home/user/ljclang
+RUN LJCLANG_TESTS_NO_CXX_STDLIB=1 make test
+
+WORKDIR /home/user
+
 ##########
 
 ENTRYPOINT ["/bin/sh"]
